manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: addressbook-service
  namespace: directory
spec:
  selector:
    app: addressbook
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

#apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: webapp-ingress
#   namespace: gateway
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-1:322266404742:certificate/a1027753-3cdb-4841-af8b-4f1a3266d97f
#     alb.ingress.kubernetes.io/subnets:
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/load-balancer-name: webapp-server-ip
#     alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
# spec:
#   ingressClassName: alb
#   rules:
#     - host: webapp.shiawslab.com
#       http:
#         paths:
#           - path: /
#             pathType: Exact
#             backend:
#               service:
#                 name: webapp-service
#                 port:
#                   number: 8080
